force-app/main/default/objects/TTS_Funding_Award__c/TTS_Funding_Award__c.object-meta.xml
<CustomObject>
    <description>[TTS] Research funding awards (grants, contracts, sponsored programs) that fund disclosed research. Ties subject inventions to their funding agreement for Bayh-Dole/iEdison and AUTM reporting.</description>
    <label>Funding Award</label>
    <nameField>
        <label>Award Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Funding Awards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>