force-app/main/default/objects/TTS_Funding_Award__c/fields/Award_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_End_Date__c</fullName>
    <description>The date the award period ends.</description>
    <inlineHelpText>Enter the end date of the award period.</inlineHelpText>
    <label>Award End Date</label>
    <type>Date</type>
</CustomField>