force-app/main/default/objects/TTS_Funding_Award__c/fields/Award_Number__c.field-meta.xml
<CustomField>
    <fullName>Award_Number__c</fullName>
    <description>Sponsor or agency identifier for the award (e.g. federal grant/contract number). Primary key for iEdison and Bayh-Dole reporting.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the funding body's official award, grant, or contract number.</inlineHelpText>
    <label>Award Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>