force-app/main/default/objects/TTS_Funding_Award__c/fields/Award_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Award_Start_Date__c</fullName>
    <description>The date the award period begins.</description>
    <inlineHelpText>Enter the start date of the award period.</inlineHelpText>
    <label>Award Start Date</label>
    <type>Date</type>
</CustomField>