force-app/main/default/objects/TTS_Funding_Award__c/fields/Awarding_Agency__c.field-meta.xml
<CustomField>
    <fullName>Awarding_Agency__c</fullName>
    <description>Classifies the awarding body, used to route statutory reporting (iEdison for US federal, HE-BCI/KEF for UK).</description>
    <inlineHelpText>Select the agency or programme that made the award.</inlineHelpText>
    <label>Awarding Agency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NIH</fullName>
            </value>
            <value>
                <fullName>NSF</fullName>
            </value>
            <value>
                <fullName>DOE</fullName>
            </value>
            <value>
                <fullName>DOD</fullName>
            </value>
            <value>
                <fullName>NASA</fullName>
            </value>
            <value>
                <fullName>USDA</fullName>
            </value>
            <value>
                <fullName>Horizon Europe</fullName>
            </value>
            <value>
                <fullName>ERC</fullName>
            </value>
            <value>
                <fullName>UKRI</fullName>
            </value>
            <value>
                <fullName>Innovate UK</fullName>
            </value>
            <value>
                <fullName>State or Regional</fullName>
            </value>
            <value>
                <fullName>Foundation or Charity</fullName>
            </value>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>