force-app/main/default/objects/TTS_Funding_Award__c/fields/Bayh_Dole_Subject__c.field-meta.xml
<CustomField>
    <fullName>Bayh_Dole_Subject__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the award is US federal funding subject to the Bayh-Dole Act, triggering iEdison disclosure and reporting obligations.</description>
    <inlineHelpText>Select when the award is US federal funding subject to Bayh-Dole (iEdison reporting required).</inlineHelpText>
    <label>Bayh-Dole Subject</label>
    <type>Checkbox</type>
</CustomField>