force-app/main/default/objects/TTS_Funding_Award__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Free-text summary of the award scope and purpose.</description>
    <inlineHelpText>Describe the scope and purpose of the award.</inlineHelpText>
    <label>Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>