force-app/main/default/objects/TTS_Funding_Award__c/fields/Funding_Type__c.field-meta.xml
<CustomField>
    <fullName>Funding_Type__c</fullName>
    <description>The nature of the funding instrument. Proof of Concept covers translational/gap funding.</description>
    <inlineHelpText>Select the type of funding instrument.</inlineHelpText>
    <label>Funding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Federal Grant</fullName>
            </value>
            <value>
                <fullName>Federal Contract</fullName>
            </value>
            <value>
                <fullName>State or Regional</fullName>
            </value>
            <value>
                <fullName>Industry Sponsored</fullName>
            </value>
            <value>
                <fullName>Foundation or Charity</fullName>
            </value>
            <value>
                <fullName>Internal or Proof of Concept</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>