force-app/main/default/objects/TTS_Funding_Award__c/fields/Principal_Investigator__c.field-meta.xml
<CustomField>
    <fullName>Principal_Investigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The lead researcher responsible for the award.</description>
    <inlineHelpText>Select the principal investigator for this award.</inlineHelpText>
    <label>Principal Investigator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>