force-app/main/default/objects/TTS_Funding_Award__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The organisation funding the award (agency, sponsor, or foundation).</description>
    <inlineHelpText>Select the funding body that awarded this grant or contract.</inlineHelpText>
    <label>Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Funding Awards</relationshipLabel>
    <relationshipName>Funding_Awards</relationshipName>
    <type>Lookup</type>
</CustomField>