force-app/main/default/objects/TTS_Funding_Award__c/fields/Total_Awarded_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Awarded_Amount__c</fullName>
    <description>Total value of the award. In multi-currency orgs this is held in the record's currency; feeds the AUTM research-expenditure line.</description>
    <inlineHelpText>Enter the total awarded amount in the award's currency.</inlineHelpText>
    <label>Total Awarded Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>